# subconverter_config

./: .gitignore  README.md  app.py  build.py  config.toml  convert.py  remote_config.toml  update.bat  zeabur.ignore  配置规则更新推送.bat
config/: clash_base.yml  config.toml  country.toml  dns.toml  emoji.toml  emoji.txt  encrypt.py  man_what_can_i_say  remote_config.toml
rules/: China.list  Global.list
server/: Cargo.toml  Dockerfile  app.py  pruner.py  vercel.json  备份  本地启动.bat
server/cache/: Cargo.toml
server/cache/src/: lib.rs  redis_cache.rs
server/core/: Cargo.toml
server/core/src/: env.rs  groups.rs  lib.rs  main.rs  registry.rs  rules.rs  rules_processor.rs  store.rs  subconverter.rs  subscribe.rs  url.rs
server/src/: pruner.rs
server/vercel/: Cargo.toml  vercel.json
server/vercel/api/: axum.rs  index.rs
