[package]
name = "cache"
version = "0.1.0"
edition = "2024"

[dependencies]
redis = { version = "1.0.4", features = ["tokio-comp", "connection-manager"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1.21.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow="1.0.102"
moka = { version = "0.12", features = ["future"] } # 异步内存缓存
tracing = "0.1"
async-trait ="0.1"
