[package]
name = "vercel-adapter"
version = "0.1.0"
edition = "2024"

[[bin]]
name= "index"
path = "api/index.rs"

[dependencies]
vercel_runtime = "2.1.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
