[package]
name = "vercel-adapter"
version = "0.1.0"
edition = "2024"

# [[bin]]
# name= "index"
# path = "api/index.rs"

[[bin]]
name = "axum"
path = "api/axum.rs"

[dependencies]

vercel_runtime = { version = "2.1.1", features = ["axum"] }
tokio = { version = "1.0", features = ["full"] }
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
tower = { version = "0.5" }
core = { git = "https://github.com/YooRarely/subconverter_config", branch = "rust-server" }


[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
